croaring-sys/CRoaring/roaring.h


typedef struct roaring_array_s {
    int32_t size;
    int32_t allocation_size;
    ROARING_CONTAINER_T **containers;  
    uint16_t *keys;
    uint8_t *typecodes;
    uint8_t flags;
} roaring_array_t;
typedef struct roaring_statistics_s {
    uint32_t n_containers; 
    uint32_t n_array_containers;  
    uint32_t n_run_containers;    
    uint32_t n_bitset_containers; 
    uint32_t
        n_values_array_containers;    
    uint32_t n_values_run_containers; 
    uint32_t
        n_values_bitset_containers; 
    uint32_t n_bytes_array_containers;  
    uint32_t n_bytes_run_containers;    
    uint32_t n_bytes_bitset_containers; 
    uint32_t
        max_value; 
    uint32_t
        min_value; 
    CROARING_DEPRECATED
    uint64_t sum_value; 
    uint64_t cardinality; 
} roaring_statistics_t;
typedef struct roaring_container_iterator_s {
    int32_t index;
} roaring_container_iterator_t;
using api::roaring_container_iterator_t;
typedef struct roaring_bitmap_s {
    roaring_array_t high_low_container;
} roaring_bitmap_t;
roaring_bitmap_t *roaring_bitmap_lazy_or(const roaring_bitmap_t *r1,
                                         const roaring_bitmap_t *r2,
                                         const bool bitsetconversion);
void roaring_bitmap_lazy_or_inplace(roaring_bitmap_t *r1,
                                    const roaring_bitmap_t *r2,
                                    const bool bitsetconversion);
void roaring_bitmap_repair_after_lazy(roaring_bitmap_t *r1);
roaring_bitmap_t *roaring_bitmap_lazy_xor(const roaring_bitmap_t *r1,
                                          const roaring_bitmap_t *r2);
void roaring_bitmap_lazy_xor_inplace(roaring_bitmap_t *r1,
                                     const roaring_bitmap_t *r2);
roaring_bitmap_t *roaring_bitmap_flip(const roaring_bitmap_t *r1,
                                      uint64_t range_start, uint64_t range_end);
roaring_bitmap_t *roaring_bitmap_flip_closed(const roaring_bitmap_t *x1,
                                             uint32_t range_start,
                                             uint32_t range_end);
void roaring_bitmap_flip_inplace(roaring_bitmap_t *r1, uint64_t range_start,
                                 uint64_t range_end);
void roaring_bitmap_flip_inplace_closed(roaring_bitmap_t *r1,
                                        uint32_t range_start,
                                        uint32_t range_end);
bool roaring_bitmap_select(const roaring_bitmap_t *r, uint32_t rank,
                           uint32_t *element);
uint64_t roaring_bitmap_rank(const roaring_bitmap_t *r, uint32_t x);
void roaring_bitmap_rank_many(const roaring_bitmap_t *r, const uint32_t *begin,
                              const uint32_t *end, uint64_t *ans);
int64_t roaring_bitmap_get_index(const roaring_bitmap_t *r, uint32_t x);
uint32_t roaring_bitmap_minimum(const roaring_bitmap_t *r);
uint32_t roaring_bitmap_maximum(const roaring_bitmap_t *r);
void roaring_bitmap_statistics(const roaring_bitmap_t *r,
                               roaring_statistics_t *stat);
bool roaring_bitmap_internal_validate(const roaring_bitmap_t *r,
                                      const char **reason);
typedef struct roaring_uint32_iterator_s {
    const roaring_bitmap_t *parent;        
    const ROARING_CONTAINER_T *container;  
    uint8_t typecode;                      
    int32_t container_index;               
    uint32_t highbits;                     
    roaring_container_iterator_t container_it;
    uint32_t current_value;
    bool has_value;
}
 roaring_uint32_iterator_t;
void roaring_iterator_init(const roaring_bitmap_t *r,
                           roaring_uint32_iterator_t *newit);
void roaring_iterator_init_last(const roaring_bitmap_t *r,
                                roaring_uint32_iterator_t *newit);
roaring_uint32_iterator_t *roaring_iterator_create(const roaring_bitmap_t *r);
bool roaring_uint32_iterator_advance(roaring_uint32_iterator_t *it);
bool roaring_uint32_iterator_previous(roaring_uint32_iterator_t *it);
bool roaring_uint32_iterator_move_equalorlarger(roaring_uint32_iterator_t *it,
                                                uint32_t val);
roaring_uint32_iterator_t *roaring_uint32_iterator_copy(
    const roaring_uint32_iterator_t *it);
void roaring_uint32_iterator_free(roaring_uint32_iterator_t *it);
uint32_t roaring_uint32_iterator_read(roaring_uint32_iterator_t *it,
                                      uint32_t *buf, uint32_t count);
typedef void* (*roaring_malloc_p)(size_t);
typedef void* (*roaring_realloc_p)(void*, size_t);
typedef void* (*roaring_calloc_p)(size_t, size_t);
typedef void (*roaring_free_p)(void*);
typedef void* (*roaring_aligned_malloc_p)(size_t, size_t);
typedef void (*roaring_aligned_free_p)(void*);
typedef struct roaring_memory_s {
    roaring_malloc_p malloc;
    roaring_realloc_p realloc;
    roaring_calloc_p calloc;
    roaring_free_p free;
    roaring_aligned_malloc_p aligned_malloc;
    roaring_aligned_free_p aligned_free;
} roaring_memory_t;